# python-gerritclient

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .travis.yml  AUTHORS  ChangeLog  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: lint.yaml  publish.yaml  test.yaml  test.yml
docs/examples/json/: demo-account.json  demo-change.json  demo-group.json  demo-project.json
docs/examples/yaml/: demo-account.yaml  demo-change.yaml  demo-group.yaml  demo-project.yaml
docs/source/: conf.py  index.rst
docs/source/cli/: account.rst  change.rst  group.rst  index.rst  plugin.rst  project.rst  server.rst
gerritclient/: __init__.py  client.py  error.py  main.py  settings.py  settings.yaml
gerritclient/commands/: account.py  base.py  change.py  config.py  group.py  plugin.py  project.py  server.py
gerritclient/common/: utils.py
gerritclient/tests/: conftest.py
gerritclient/tests/unit/: test_settings.py
gerritclient/tests/unit/cli/: clibase.py  test_account.py  test_change.py  test_config.py  test_group.py  test_plugin.py  test_project.py  test_server.py
gerritclient/tests/unit/common/: test_utils.py
gerritclient/tests/utils/: fake_account.py  fake_change.py  fake_comment.py  fake_commit.py  fake_config.py  fake_group.py  fake_plugin.py  fake_project.py  fake_server.py  fake_sshkeyinfo.py  fake_tag.py  fake_weblinkifno.py
gerritclient/v1/: __init__.py  account.py  base.py  change.py  config.py  group.py  plugin.py  project.py  server.py
