[project]
name = "python-gerritclient"
version = "1.0.0"
description = "CLI tool and Python API wrapper for Gerrit Code Review"
authors = [
    {name = "Vitalii Kulanov", email = "vitaliy@kulanov.org.ua"}
]
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"
keywords = ["gerrit", "code-review", "cli", "rest-api"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "cliff>=4.0.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "fixtures>=4.0.0",
    "oslotest>=5.0.0",
    "testtools>=2.5.0",
]

[project.scripts]
gerrit = "gerritclient.main:main"

[project.entry-points.gerritclient]
account_create = "gerritclient.commands.account:AccountCreate"
account_disable = "gerritclient.commands.account:AccountDisable"
account_email_add = "gerritclient.commands.account:AccountEmailAdd"
account_email_delete = "gerritclient.commands.account:AccountEmailDelete"
"account_email_set-preferred" = "gerritclient.commands.account:AccountPreferredEmailSet"
account_enable = "gerritclient.commands.account:AccountEnable"
account_membership_list = "gerritclient.commands.account:AccountMembershipList"
account_list = "gerritclient.commands.account:AccountList"
account_password_set = "gerritclient.commands.account:AccountSetPassword"
account_password_delete = "gerritclient.commands.account:AccountDeletePassword"
account_name_set = "gerritclient.commands.account:AccountSetName"
account_oauth_show = "gerritclient.commands.account:AccountOAuthShow"
account_show = "gerritclient.commands.account:AccountShow"
"account_ssh-key_add" = "gerritclient.commands.account:AccountSSHKeyAdd"
"account_ssh-key_delete" = "gerritclient.commands.account:AccountSSHKeyDelete"
"account_ssh-key_list" = "gerritclient.commands.account:AccountSSHKeyList"
"account_ssh-key_show" = "gerritclient.commands.account:AccountSSHKeyShow"
account_state_show = "gerritclient.commands.account:AccountStateShow"
account_status_set = "gerritclient.commands.account:AccountStatusSet"
account_status_show = "gerritclient.commands.account:AccountStatusShow"
account_username_set = "gerritclient.commands.account:AccountSetUsername"
change_create = "gerritclient.commands.change:ChangeCreate"
change_list = "gerritclient.commands.change:ChangeList"
change_abandon = "gerritclient.commands.change:ChangeAbandon"
change_assignee_delete = "gerritclient.commands.change:ChangeAssigneeDelete"
change_assignee_history_show = "gerritclient.commands.change:ChangeAssigneeHistoryShow"
change_assignee_set = "gerritclient.commands.change:ChangeAssigneeSet"
change_assignee_show = "gerritclient.commands.change:ChangeAssigneeShow"
change_check = "gerritclient.commands.change:ChangeCheck"
change_comment_list = "gerritclient.commands.change:ChangeCommentList"
change_delete = "gerritclient.commands.change:ChangeDelete"
change_draft_publish = "gerritclient.commands.change:ChangeDraftPublish"
change_fix = "gerritclient.commands.change:ChangeFix"
"change_included-in_show" = "gerritclient.commands.change:ChangeIncludedInSHow"
change_index = "gerritclient.commands.change:ChangeIndex"
change_move = "gerritclient.commands.change:ChangeMove"
change_rebase = "gerritclient.commands.change:ChangeRebase"
change_restore = "gerritclient.commands.change:ChangeRestore"
change_revert = "gerritclient.commands.change:ChangeRevert"
change_show = "gerritclient.commands.change:ChangeShow"
change_submit = "gerritclient.commands.change:ChangeSubmit"
change_topic_delete = "gerritclient.commands.change:ChangeTopicDelete"
change_topic_set = "gerritclient.commands.change:ChangeTopicSet"
change_topic_show = "gerritclient.commands.change:ChangeTopicShow"
group_create = "gerritclient.commands.group:GroupCreate"
group_description_delete = "gerritclient.commands.group:GroupDeleteDescription"
group_description_set = "gerritclient.commands.group:GroupSetDescription"
group_include = "gerritclient.commands.group:GroupInclude"
group_exclude = "gerritclient.commands.group:GroupExclude"
group_list = "gerritclient.commands.group:GroupList"
group_member_add = "gerritclient.commands.group:GroupMemberAdd"
group_member_delete = "gerritclient.commands.group:GroupMemberDelete"
group_member_list = "gerritclient.commands.group:GroupMemberList"
group_options_set = "gerritclient.commands.group:GroupSetOptions"
group_owner_set = "gerritclient.commands.group:GroupSetOwner"
group_rename = "gerritclient.commands.group:GroupRename"
group_show = "gerritclient.commands.group:GroupShow"
plugin_disable = "gerritclient.commands.plugin:PluginDisable"
plugin_enable = "gerritclient.commands.plugin:PluginEnable"
plugin_install = "gerritclient.commands.plugin:PluginInstall"
plugin_list = "gerritclient.commands.plugin:PluginList"
plugin_reload = "gerritclient.commands.plugin:PluginReload"
plugin_show = "gerritclient.commands.plugin:PluginShow"
project_branch_create = "gerritclient.commands.project:ProjectBranchCreate"
project_branch_delete = "gerritclient.commands.project:ProjectBranchDelete"
project_branch_list = "gerritclient.commands.project:ProjectBranchList"
project_branch_reflog_show = "gerritclient.commands.project:ProjectBranchReflogShow"
project_branch_show = "gerritclient.commands.project:ProjectBranchShow"
project_child_list = "gerritclient.commands.project:ProjectChildList"
"project_commit_file-content_show" = "gerritclient.commands.project:ProjectCommitFileContentShow"
"project_commit_included-in" = "gerritclient.commands.project:ProjectCommitIncludedIn"
project_commit_show = "gerritclient.commands.project:ProjectCommitShow"
project_configuration_download = "gerritclient.commands.project:ProjectConfigDownload"
project_configuration_set = "gerritclient.commands.project:ProjectConfigSet"
project_create = "gerritclient.commands.project:ProjectCreate"
project_delete = "gerritclient.commands.project:ProjectDelete"
project_description_set = "gerritclient.commands.project:ProjectDescriptionSet"
project_description_show = "gerritclient.commands.project:ProjectDescriptionShow"
"project_gc-run" = "gerritclient.commands.project:ProjectGCRun"
project_head_show = "gerritclient.commands.project:ProjectHeadShow"
project_head_set = "gerritclient.commands.project:ProjectHeadSet"
project_list = "gerritclient.commands.project:ProjectList"
project_parent_set = "gerritclient.commands.project:ProjectParentSet"
project_parent_show = "gerritclient.commands.project:ProjectParentShow"
"project_repo-statistics_show" = "gerritclient.commands.project:ProjectRepoStatisticsShow"
project_show = "gerritclient.commands.project:ProjectShow"
project_tag_create = "gerritclient.commands.project:ProjectTagCreate"
project_tag_delete = "gerritclient.commands.project:ProjectTagDelete"
project_tag_list = "gerritclient.commands.project:ProjectTagList"
project_tag_show = "gerritclient.commands.project:ProjectTagShow"
server_version = "gerritclient.commands.server:ServerVersionShow"
server_capabilities_download = "gerritclient.commands.server:ServerCapabilitiesDownload"
server_cache_flush = "gerritclient.commands.server:ServerCacheFlush"
server_cache_list = "gerritclient.commands.server:ServerCacheList"
server_cache_show = "gerritclient.commands.server:ServerCacheShow"
server_configuration_download = "gerritclient.commands.server:ServerConfigDownload"
server_state_show = "gerritclient.commands.server:ServerStateSummaryList"
server_task_delete = "gerritclient.commands.server:ServerTaskDelete"
server_task_list = "gerritclient.commands.server:ServerTaskList"
server_task_show = "gerritclient.commands.server:ServerTaskShow"

[project.urls]
Homepage = "https://github.com/tivaliy/python-gerritclient"
Repository = "https://github.com/tivaliy/python-gerritclient"
Issues = "https://github.com/tivaliy/python-gerritclient/issues"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N802",  # function name should be lowercase (cliff uses mixedCase)
    "N806",  # variable in function should be lowercase
    "N818",  # exception naming (GerritClientException is established pattern)
    "B904",  # exception chaining (would change error behavior)
    "F401",  # unused imports in __init__.py (used for re-exports)
    "SIM105", # contextlib.suppress (setup.py compatibility)
    "UP015", # unnecessary open mode argument (explicit is better for test compatibility)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["gerritclient/tests"]
python_files = ["test_*.py"]
addopts = "--cov=gerritclient --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
ignore_missing_imports = true

[tool.coverage.run]
source = ["gerritclient"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
