[metadata]
name = python-gerritclient
version = 0.0.1
summary = CLI tool for managing Gerrit Code Review.
author = Vitalii Kulanov.
author-email = vitaliy@kulanov.org.ua
home-page = https://github.com/tivaliy/python-gerritclient
description-file =
    README.md
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    gerritclient

[entry_points]
console_scripts =
    gerrit=gerritclient.main:main

gerritclient =
    account_create=gerritclient.commands.account:AccountCreate
    account_disable=gerritclient.commands.account:AccountDisable
    account_enable=gerritclient.commands.account:AccountEnable
    account_list=gerritclient.commands.account:AccountList
    account_name_set=gerritclient.commands.account:AccountSetName
    account_show=gerritclient.commands.account:AccountShow
    account_username_set=gerritclient.commands.account:AccountSetUsername
    group_create=gerritclient.commands.group:GroupCreate
    group_description_delete=gerritclient.commands.group:GroupDeleteDescription
    group_description_set=gerritclient.commands.group:GroupSetDescription
    group_list=gerritclient.commands.group:GroupList
    group_member_list=gerritclient.commands.group:GroupMemberList
    group_options_set=gerritclient.commands.group:GroupSetOptions
    group_owner_set=gerritclient.commands.group:GroupSetOwner
    group_rename=gerritclient.commands.group:GroupRename
    group_show=gerritclient.commands.group:GroupShow
    plugin_list=gerritclient.commands.plugin:PluginList
    plugin_show=gerritclient.commands.plugin:PluginShow
    project_create=gerritclient.commands.project:ProjectCreate
    project_delete=gerritclient.commands.project:ProjectDelete
    project_list=gerritclient.commands.project:ProjectList
    project_show=gerritclient.commands.project:ProjectShow

[wheel]
universal = 1
