[metadata]
name = python-gerritclient
version = 0.0.1
summary = CLI tool for managing Gerrit Code Review.
author = Vitalii Kulanov.
author-email = vitaliy@kulanov.org.ua
home-page = https://github.com/tivaliy/python-gerritclient
description-file =
    README.md
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    gerritclient

[entry_points]
console_scripts =
    gerrit=gerritclient.main:main

gerritclient =
    account_create=gerritclient.commands.account:AccountCreate
    account_disable=gerritclient.commands.account:AccountDisable
    account_email_add=gerritclient.commands.account:AccountEmailAdd
    account_email_delete=gerritclient.commands.account:AccountEmailDelete
    account_email_set-preferred=gerritclient.commands.account:AccountPreferredEmailSet
    account_enable=gerritclient.commands.account:AccountEnable
    account_membership_list=gerritclient.commands.account:AccountMembershipList
    account_list=gerritclient.commands.account:AccountList
    account_password_set=gerritclient.commands.account:AccountSetPassword
    account_password_delete=gerritclient.commands.account:AccountDeletePassword
    account_name_set=gerritclient.commands.account:AccountSetName
    account_show=gerritclient.commands.account:AccountShow
    account_ssh-key_add=gerritclient.commands.account:AccountSSHKeyAdd
    account_ssh-key_delete=gerritclient.commands.account:AccountSSHKeyDelete
    account_ssh-key_list=gerritclient.commands.account:AccountSSHKeyList
    account_ssh-key_show=gerritclient.commands.account:AccountSSHKeyShow
    account_status_show=gerritclient.commands.account:AccountStatusShow
    account_username_set=gerritclient.commands.account:AccountSetUsername
    change_create=gerritclient.commands.change:ChangeCreate
    change_list=gerritclient.commands.change:ChangeList
    change_abandon=gerritclient.commands.change:ChangeAbandon
    change_assignee_delete=gerritclient.commands.change:ChangeAssigneeDelete
    change_assignee_history_show=gerritclient.commands.change:ChangeAssigneeHistoryShow
    change_assignee_set=gerritclient.commands.change:ChangeAssigneeSet
    change_assignee_show=gerritclient.commands.change:ChangeAssigneeShow
    change_check=gerritclient.commands.change:ChangeCheck
    change_comment_list=gerritclient.commands.change:ChangeCommentList
    change_delete=gerritclient.commands.change:ChangeDelete
    change_draft_publish=gerritclient.commands.change:ChangeDraftPublish
    change_fix=gerritclient.commands.change:ChangeFix
    change_included-in_show=gerritclient.commands.change:ChangeIncludedInSHow
    change_index=gerritclient.commands.change:ChangeIndex
    change_move=gerritclient.commands.change:ChangeMove
    change_rebase=gerritclient.commands.change:ChangeRebase
    change_restore=gerritclient.commands.change:ChangeRestore
    change_revert=gerritclient.commands.change:ChangeRevert
    change_show=gerritclient.commands.change:ChangeShow
    change_submit=gerritclient.commands.change:ChangeSubmit
    change_topic_delete=gerritclient.commands.change:ChangeTopicDelete
    change_topic_set=gerritclient.commands.change:ChangeTopicSet
    change_topic_show=gerritclient.commands.change:ChangeTopicShow
    group_create=gerritclient.commands.group:GroupCreate
    group_description_delete=gerritclient.commands.group:GroupDeleteDescription
    group_description_set=gerritclient.commands.group:GroupSetDescription
    group_include=gerritclient.commands.group:GroupInclude
    group_exclude=gerritclient.commands.group:GroupExclude
    group_list=gerritclient.commands.group:GroupList
    group_member_add=gerritclient.commands.group:GroupMemberAdd
    group_member_delete=gerritclient.commands.group:GroupMemberDelete
    group_member_list=gerritclient.commands.group:GroupMemberList
    group_options_set=gerritclient.commands.group:GroupSetOptions
    group_owner_set=gerritclient.commands.group:GroupSetOwner
    group_rename=gerritclient.commands.group:GroupRename
    group_show=gerritclient.commands.group:GroupShow
    plugin_disable=gerritclient.commands.plugin:PluginDisable
    plugin_enable=gerritclient.commands.plugin:PluginEnable
    plugin_install=gerritclient.commands.plugin:PluginInstall
    plugin_list=gerritclient.commands.plugin:PluginList
    plugin_reload=gerritclient.commands.plugin:PluginReload
    plugin_show=gerritclient.commands.plugin:PluginShow
    project_create=gerritclient.commands.project:ProjectCreate
    project_delete=gerritclient.commands.project:ProjectDelete
    project_description_set=gerritclient.commands.project:ProjectDescriptionSet
    project_description_show=gerritclient.commands.project:ProjectDescriptionShow
    project_list=gerritclient.commands.project:ProjectList
    project_parent_set=gerritclient.commands.project:ProjectParentSet
    project_parent_show=gerritclient.commands.project:ProjectParentShow
    project_show=gerritclient.commands.project:ProjectShow
    server_version=gerritclient.commands.server:ServerVersionShow
    server_capabilities_download=gerritclient.commands.server:ServerCapabilitiesDownload
    server_cache_flush=gerritclient.commands.server:ServerCacheFlush
    server_cache_list=gerritclient.commands.server:ServerCacheList
    server_cache_show=gerritclient.commands.server:ServerCacheShow
    server_configuration_download=gerritclient.commands.server:ServerConfigDownload
    server_state_show=gerritclient.commands.server:ServerStateSummaryList
    server_task_delete=gerritclient.commands.server:ServerTaskDelete
    server_task_list=gerritclient.commands.server:ServerTaskList
    server_task_show=gerritclient.commands.server:ServerTaskShow

[wheel]
universal = 1

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1
